--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "dev": {
-    "mongoUrl": "mongodb://mongo.container:27017/",
+    "mongoUrl": "mongodb://mongo-container:27017/",
     "mongoDatabase": "pc",
     "port": "4003",
     "domain": "localhost",
